import request from "supertest"
import getUserToken from "../../__helpers__/getUserToken";
import osirisRequestRepository from '../../../src/modules/providers/osiris/repositories/osiris.request.repository';
import fonjepSubventionRepository from '../../../src/modules/providers/fonjep/repositories/fonjep.subvention.repository';
import { SubventionEntity as FonjepEntityFixture } from '../providers/fonjep/__fixtures__/entity';
import OsirisRequestEntityFixture from '../providers/osiris/__fixtures__/entity';
import { Document } from 'mongodb';

const g = global as unknown as { app: unknown }

let osirisDocumentId: string | undefined;
let fonjepDocumentId: string | undefined;

describe("/subvention", () => {
    beforeEach(async () => {
        await osirisRequestRepository.add(OsirisRequestEntityFixture)
        await fonjepSubventionRepository.create(FonjepEntityFixture)
        osirisDocumentId = ((await osirisRequestRepository.findBySiret(OsirisRequestEntityFixture.legalInformations.siret))[0] as Document)._id.toString();
        fonjepDocumentId = ((await fonjepSubventionRepository.findBySiret(FonjepEntityFixture.legalInformations.siret))[0] as Document)._id.toString();
    })

    describe("/{id}", () => {
        it("should return a subvention from osiris-request collection", async () => {
            const response = await request(g.app)
                .get(`/subvention/${osirisDocumentId}`)
                .set("x-access-token", await getUserToken())
                .set('Accept', 'application/json');
            expect(response.statusCode).toBe(200);
            expect(response.body).toMatchSnapshot();
        });
        it("should return a subvention from fonjep collection", async () => {
            const response = await request(g.app)
                .get(`/subvention/${fonjepDocumentId}`)
                .set("x-access-token", await getUserToken())
                .set('Accept', 'application/json');
            expect(response.statusCode).toBe(200);
            expect(response.body).toMatchSnapshot();
        })
    })
})