// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/subvention /{id} should return a subvention from fonjep collection 1`] = `
Object {
  "subvention": Object {
    "annee_demande": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "number",
      "value": 2022,
    },
    "date_fin": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "object",
      "value": "2022-01-03T00:00:00.000Z",
    },
    "dispositif": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "Dispositif",
    },
    "montants": Object {
      "accorde": Object {
        "last_update": "2022-01-02T00:00:00.000Z",
        "provider": "Extranet FONJEP",
        "type": "number",
        "value": 500,
      },
      "demande": Object {
        "last_update": "2022-01-02T00:00:00.000Z",
        "provider": "Extranet FONJEP",
        "type": "number",
        "value": 500,
      },
    },
    "plein_temps": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "Oui",
    },
    "pluriannualite": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "Oui",
    },
    "service_instructeur": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "XXX",
    },
    "siret": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "00000000000002",
    },
    "status": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "En cours",
    },
    "versementKey": Object {
      "last_update": "2022-01-02T00:00:00.000Z",
      "provider": "Extranet FONJEP",
      "type": "string",
      "value": "D00000",
    },
  },
  "success": true,
}
`;

exports[`/subvention /{id} should return a subvention from osiris-request collection 1`] = `
Object {
  "subvention": Object {
    "actions_proposee": Array [],
    "annee_demande": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "number",
      "value": 2022,
    },
    "contact": Object {
      "email": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
    },
    "date_commision": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "object",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "dispositif": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "undefined",
    },
    "ej": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "string",
      "value": "EJ00001",
    },
    "montants": Object {
      "accorde": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
      "demande": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
      "propose": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
      "total": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
    },
    "pluriannualite": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "undefined",
    },
    "service_instructeur": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "undefined",
    },
    "siret": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "string",
      "value": "00000000000001",
    },
    "sous_dispositif": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "undefined",
    },
    "status": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "undefined",
    },
    "territoires": Array [],
    "versement": Object {
      "acompte": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
      "compensation": Object {
        "n-1": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "OSIRIS",
          "type": "undefined",
        },
        "reversement": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "OSIRIS",
          "type": "undefined",
        },
      },
      "realise": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
      "solde": Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "OSIRIS",
        "type": "undefined",
      },
    },
    "versementKey": Object {
      "last_update": "2022-01-01T00:00:00.000Z",
      "provider": "OSIRIS",
      "type": "string",
      "value": "EJ00001",
    },
  },
  "success": true,
}
`;
